@@ -10,6 +10,7 @@
 
 
 Version 4.1.6
+ - Changed: Show persons name as Lightbox title (instead of file) name when viewing various Charts (windmillway)
  - Fixed: [ 1961705 ] Pedigree chart in portrait despite pref setting (canajun2eh)
  - Fixed: [ 1961288 ] [4.1.5] indi page tab script error if lightbox module not installed (windmillway)
  - Fixed: [ 1953273 ] [4.1.5] Research Assistant code parse errors (andrew_scss)
